syntax = "proto3";

option go_package = "github.com/dawidd6/p2p/pkg/torrent";

message Torrent {
    string file_name = 1;
    string file_hash = 2;
    int64 file_size = 3;
    int64 piece_size = 4;
    repeated string piece_hashes = 5;
    string tracker_address = 6;
}
