syntax = "proto3";

import "pkg/metadata/metadata.proto";

option go_package = "github.com/dawidd6/p2p/pkg/tracker";

service Tracker {
    rpc Announce (AnnounceRequest) returns (AnnounceResponse);
}

message AnnounceRequest {
}

message AnnounceResponse {
}

